[tool.poetry]
name = "poetry-main"
version = "0.1.0"
description = ""
authors = ["Krzysztof Kozmic <krzysztof.kozmic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry-dep1 = { git = "git@github.com:bug-repros/poetry-dep1.git", branch = "main" }


[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
